KB-11163 | Increased code coverage